care/force-app/main/default/objects/Privacy_Request__c/Privacy_Request__c.object-meta.xml
<CustomObject>
    <description>This object tracks requests</description>
    <label>Privacy Request</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Privacy Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>