care/force-app/main/default/objects/Privacy_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>The Address of the member for whom the request pertains to.</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>