care/force-app/main/default/objects/Privacy_Request__c/fields/Auto_Expire__c.field-meta.xml
<CustomField>
    <fullName>Auto_Expire__c</fullName>
    <formula>Request_Date__c  + $CustomMetadata.Retention_Custom_Metadata__mdt.CCPA_Auto_Expire_Unverified_Requests.Days__c</formula>
    <label>Auto Expire Date</label>
    <type>DateTime</type>
</CustomField>