care/force-app/main/default/objects/Privacy_Request__c/fields/Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Thread_Id__c</fullName>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Case__c,5) &amp; SUBSTITUTE(Left(RIGHT(Case__c,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Case__c,5) &amp; &quot;:ref&quot;</formula>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>