care/force-app/main/default/objects/Privacy_Request__c/fields/CSR_Name__c.field-meta.xml
<CustomField>
    <fullName>CSR_Name__c</fullName>
    <inlineHelpText>The name of the CSR Rep who submitted the CSR Web Form.</inlineHelpText>
    <label>CSR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>