care/force-app/main/default/objects/Privacy_Request__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <inlineHelpText>The User&apos;s Data.  Intended to be used by the HomePay only (as the other teams will use Data URL instead).  The HomePay team will need to delete this Privacy Request record during a delete request.</inlineHelpText>
    <label>Data</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>