care/force-app/main/default/objects/Privacy_Request__c/fields/Data_Categories__c.field-meta.xml
<CustomField>
    <fullName>Data_Categories__c</fullName>
    <inlineHelpText>A comma delimited list of all the categories of data available in the Remote Platform.</inlineHelpText>
    <label>Data Categories</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>