care/force-app/main/default/objects/Privacy_Request__c/fields/Data_Categories_display_friendly__c.field-meta.xml
<CustomField>
    <fullName>Data_Categories_display_friendly__c</fullName>
    <inlineHelpText>This field contains a display friendly version of the Data Categories for use in emails.  The content of field is driven by changes to the Data Categories field (Data_Categories__c), which is a field that contains a comma delimited list of categories.</inlineHelpText>
    <label>Data Categories (display friendly)</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>