care/force-app/main/default/objects/Privacy_Request__c/fields/Data_URL__c.field-meta.xml
<CustomField>
    <fullName>Data_URL__c</fullName>
    <inlineHelpText>The URL where the member can get their data from.</inlineHelpText>
    <label>Data URL</label>
    <type>Url</type>
</CustomField>