care/force-app/main/default/objects/Privacy_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>The Email of the member to whom the request pertains to.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>