care/force-app/main/default/objects/Privacy_Request__c/fields/Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Email_Formula__c</fullName>
    <formula>IF (NOT(ISBLANK(Case__r.Email_m__c)),Case__r.Email_m__c,
IF (NOT(ISBLANK(Case__r.Account.PersonEmail)),Case__r.Account.PersonEmail,
Case__r.SuppliedEmail
))</formula>
    <inlineHelpText>Formula to determine the Member&apos;s Email</inlineHelpText>
    <label>Email (Formula)</label>
    <type>Text</type>
</CustomField>