care/force-app/main/default/objects/Privacy_Request__c/fields/Extension_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Notification_Date__c</fullName>
    <formula>Request_Date__c +  $CustomMetadata.Retention_Custom_Metadata__mdt.CCPA_Extension_Notification.Days__c</formula>
    <label>Extension Notification Date</label>
    <type>DateTime</type>
</CustomField>