care/force-app/main/default/objects/Privacy_Request__c/fields/Fail_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Decline_Reason__c</fullName>
    <inlineHelpText>The field where we can specify more context about a Request Status.</inlineHelpText>
    <label>Fail/Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>