care/force-app/main/default/objects/Privacy_Request__c/fields/Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Date__c</fullName>
    <inlineHelpText>The date when the platforms expect to fulfill the request. Used to coordinate among the platforms &amp; either platform may change this value. When the request is fulfilled, Salesforce will automatically set this field to the date to the current date.</inlineHelpText>
    <label>Fulfillment Date</label>
    <type>Date</type>
</CustomField>