care/force-app/main/default/objects/Privacy_Request__c/fields/Fulfillment_Date_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Date_Rationale__c</fullName>
    <inlineHelpText>The field reflect which use case was used to determine the Fulfillment Date.  It will be used to send different notifications to users.</inlineHelpText>
    <label>Fulfillment Date Rationale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Privacy_Request_Fulfillment_Date_Rationa</valueSetName>
    </valueSet>
</CustomField>