care/force-app/main/default/objects/Privacy_Request__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>The name of the member the request pertains to.</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>