care/force-app/main/default/objects/Privacy_Request__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>IF (NOT(ISBLANK(Case__r.Name_m__c)),Case__r.Name_m__c,
IF (NOT(ISBLANK(Case__r.Account.FirstName)),Case__r.Account.FirstName + &apos; &apos; + Case__r.Account.LastName,
Case__r.SuppliedName
))</formula>
    <inlineHelpText>Formula that handles the logic for determining the Member Name</inlineHelpText>
    <label>Name (Formula)</label>
    <type>Text</type>
</CustomField>