care/force-app/main/default/objects/Privacy_Request__c/fields/No_Of_Files_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Files_Retrieved__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the number of files retrieved as part of Data Access Request.</description>
    <inlineHelpText>Represents the number of files retrieved as part of Data Access Request.</inlineHelpText>
    <label>No Of Files Retrieved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>