care/force-app/main/default/objects/Privacy_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>The Date/Time when the member originally made the request.</inlineHelpText>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>