care/force-app/main/default/objects/Privacy_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Privacy_Request_Types</valueSetName>
    </valueSet>
</CustomField>