care/force-app/main/default/objects/Privacy_Request__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <inlineHelpText>This field is used if the request is being made by someone other than the member.</inlineHelpText>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>