care/force-app/main/default/objects/Privacy_Request__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <inlineHelpText>This field is used if the request is being made by someone other than the member.</inlineHelpText>
    <label>Requestor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>