care/force-app/main/default/objects/Privacy_Request__c/fields/Requestor_Relationship_to_Member__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Relationship_to_Member__c</fullName>
    <inlineHelpText>This field is used if the request is being made by someone other than the member.</inlineHelpText>
    <label>Requestor Relationship to Member</label>
    <type>TextArea</type>
</CustomField>