care/force-app/main/default/objects/Privacy_Request__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Privacy_Request_Source_Systems</valueSetName>
    </valueSet>
</CustomField>