care/force-app/main/default/objects/Privacy_Request__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>