care/force-app/main/default/objects/Privacy_Request__c/fields/Universal_Member_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Universal_Member_Id_Formula__c</fullName>
    <formula>IF (NOT(ISBLANK(Case__r.Universal_Member_Id_Formula__c)),Case__r.Universal_Member_Id_Formula__c,
Case__r.Web_Member_Id__c)</formula>
    <inlineHelpText>Formula to determine the Universal Member Id</inlineHelpText>
    <label>Universal Member Id (Formula)</label>
    <type>Text</type>
</CustomField>