care/force-app/main/default/objects/Privacy_Request__c/validationRules/Data_Categories_Required_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Categories_Required_US</fullName>
    <active>true</active>
    <description>US Data Category requests require that the Data Category field is not blank to set the status to &quot;Queued - Salesforce Platform&quot;</description>
    <errorConditionFormula>ISPICKVAL(Source_System__c, &apos;US Platform&apos;) &amp;&amp;
ISPICKVAL(Request_Type__c, &apos;Data Categories&apos;) &amp;&amp;
ISPICKVAL(Request_Status__c, &apos;Queued - Salesforce Platform&apos;) &amp;&amp;
ISBLANK( Data_Categories__c )</errorConditionFormula>
    <errorDisplayField>Data_Categories__c</errorDisplayField>
    <errorMessage>Data Categories are required before setting the status to &quot;Queued - Salesforce Platform&quot;.</errorMessage>
</ValidationRule>