care/force-app/main/default/objects/Privacy_Request__c/validationRules/Data_Required_HomePay.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Required_HomePay</fullName>
    <active>true</active>
    <description>For Home Pay, the Data field cannot be blank to set status to &quot;Request Accepted&quot;</description>
    <errorConditionFormula>ISPICKVAL(Source_System__c, &apos;HomePay&apos;) &amp;&amp;
ISPICKVAL(Request_Type__c, &apos;Access Data&apos;) &amp;&amp;
ISPICKVAL(Request_Status__c, &apos;Request Accepted&apos;) &amp;&amp;
ISBLANK(  Data__c  )</errorConditionFormula>
    <errorDisplayField>Data__c</errorDisplayField>
    <errorMessage>Data is required before setting the status to &quot;Request Accepted&quot;.</errorMessage>
</ValidationRule>