care/force-app/main/default/objects/Privacy_Request__c/validationRules/Data_URL_Required_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_URL_Required_US</fullName>
    <active>true</active>
    <description>For US Requests, Data URL must be provided before setting status to &quot;Queued - Salesforce Platform&quot;.</description>
    <errorConditionFormula>ISPICKVAL(Source_System__c, &apos;US Platform&apos;) &amp;&amp;
ISPICKVAL(Request_Type__c, &apos;Access Data&apos;) &amp;&amp;
ISPICKVAL(Request_Status__c, &apos;Queued - Salesforce Platform&apos;) &amp;&amp;
ISBLANK(  Data_URL__c )</errorConditionFormula>
    <errorDisplayField>Data_URL__c</errorDisplayField>
    <errorMessage>Data URL must not be blank when setting status to &quot;Queued - Salesforce Platform&quot;</errorMessage>
</ValidationRule>