care/force-app/main/default/objects/Privacy_Request__c/validationRules/Email_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_is_Required</fullName>
    <active>true</active>
    <description>Email is required</description>
    <errorConditionFormula>ISBLANK(Email__c )</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>The email of the member making the request is required.</errorMessage>
</ValidationRule>