care/force-app/main/default/objects/Privacy_Request__c/validationRules/Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_is_Required</fullName>
    <active>true</active>
    <description>Name is required for a Privacy Request</description>
    <errorConditionFormula>ISBLANK(Name__c)</errorConditionFormula>
    <errorDisplayField>Name__c</errorDisplayField>
    <errorMessage>The name of the member making the request is required.</errorMessage>
</ValidationRule>