care/force-app/main/default/objects/Privacy_Request__c/validationRules/Request_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Request_Date__c  )</errorConditionFormula>
    <errorDisplayField>Request_Date__c</errorDisplayField>
    <errorMessage>The date of the request is required.</errorMessage>
</ValidationRule>