care/force-app/main/default/objects/Privacy_Request__c/validationRules/Request_Status_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Status_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(Request_Status__c) )</errorConditionFormula>
    <errorDisplayField>Request_Status__c</errorDisplayField>
    <errorMessage>The status of the request is required.</errorMessage>
</ValidationRule>