care/force-app/main/default/objects/Privacy_Request__c/validationRules/Source_System_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_System_is_required</fullName>
    <active>true</active>
    <description>Privacy Requests require a source system, since each system has different business logic.</description>
    <errorConditionFormula>ISBLANK(TEXT(Source_System__c))</errorConditionFormula>
    <errorDisplayField>Source_System__c</errorDisplayField>
    <errorMessage>Source System is required</errorMessage>
</ValidationRule>