care/force-app/main/default/objects/Privacy_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Fulfillment_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>