care/force-app/main/default/objects/Privacy_Request__c/listViews/All_Intl_Platform.listView-meta.xml
<ListView>
    <fullName>All_Intl_Platform</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Fulfillment_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>Intl Platform</value>
    </filters>
    <label>All Intl Platform</label>
</ListView>