care/force-app/main/default/objects/Privacy_Request__c/listViews/US_Completed.listView-meta.xml
<ListView>
    <fullName>US_Completed</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Fail_Decline_Reason__c</columns>
    <columns>Universal_Member_Id__c</columns>
    <columns>Fulfillment_Date__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Email__c</columns>
    <columns>Case__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>US Platform</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>contains</operation>
        <value>Completed</value>
    </filters>
    <label>US - Completed</label>
    <language>en_US</language>
</ListView>